[gd_scene format=3 uid="uid://bdmkbl0brl28l"]

[ext_resource type="Script" uid="uid://bfkxo2sqj41lh" path="res://Script/inventory_item.gd" id="1_ia6di"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dul41"]
size = Vector2(22, 22)

[node name="Inventory_item" type="Node2D" unique_id=1184176859 groups=["items"]]
script = ExtResource("1_ia6di")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=248005377]

[node name="Area2D" type="Area2D" parent="." unique_id=78477572]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1662891822]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_dul41")

[node name="interactUI" type="CanvasLayer" parent="." unique_id=96757981]

[node name="ColorRect" type="ColorRect" parent="interactUI" unique_id=1346286352]
anchors_preset = -1
anchor_left = 0.82100004
anchor_top = 0.93100005
anchor_right = 0.82100004
anchor_bottom = 0.93100005
offset_left = 41.67993
offset_top = 22.519958
offset_right = 341.67993
offset_bottom = 72.51996
grow_horizontal = 0
grow_vertical = 0
color = Color(1, 0.30588236, 0.12156863, 1)

[node name="Label" type="Label" parent="interactUI/ColorRect" unique_id=854683654]
layout_mode = 0
offset_left = 42.0
offset_top = 7.0
offset_right = 227.0
offset_bottom = 30.0
text = "press \"e\" to pickup item"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
